# topological-dyslexia-detection

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  run_experiments.py  run_experiments_with_n_fix.py
baseline_raatikainen/: README.md  createMatrixAvgFeatures.py  trainParameterSearch.py  trainParameterSearchRandomForestHistFeatImport.py
scripts/: constants.py  experiment.py  get_data.py  get_dataframes.py  get_persistence_data.py  make_dataframes.py  make_table.py  persistence_image_scaler.py  process_data.py  process_data_beginning_readers.py  process_data_copco.py  process_data_reading_trials.py  time_series_homology.py  time_series_scaler.py  train_eval_svm.py  train_eval_svm_old.py  utils  utils.py
