[project]
name = "copco-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gudhi>=3.11.0",
    "joblib>=1.4.2",
    "numpy>=2.1.3",
    "pandas>=2.3.3",
    "polars>=1.29.0",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.6.1",
    "scikit-optimize>=0.10.2",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "myplot",
]

[tool.uv.sources]
myplot = { path = "../myplot" }
