[project]
name = "copco-project"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "gudhi>=3.11.0",
    "joblib>=1.5.2",
    "myplot",
    "numpy>=2.3.5",
    "polars>=1.35.2",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]

[tool.uv.sources]
myplot = { path = "../myplot", editable = true }
